# kokoro-onnx-ja

./: README.md  main.py  pyproject.toml  requirements.txt
src/kokoro_onnx/: __init__.py  config.py
