[project]
name = "kokoro-onnx"
version = "20250903"
description = "TTS with Kokoro and ONNX runtime, adapted for Japanese"
readme = "README.md"
authors = [
    { name = "thewh1teagle", email = "61390950+thewh1teagle@users.noreply.github.com" },
    { name = "Evan King", email = "evan@moonshine.ai" }
]
requires-python = ">=3.10,<3.14"
dependencies = [
    "onnxruntime>=1.20.1",
    "colorlog>=6.9.0",
    "numpy>=2.0.2",
    "misaki==0.9.4",
    "fugashi[unidic-lite]==1.5.1",
    "pyopenjtalk==0.4.1",
    "jaconv==0.4.0",
    "mojimoji==0.0.13"
]

[project.urls]
Repository = "https://github.com/evmaki/kokoro-onnx-ja"


[project.optional-dependencies]
# Windows/Linux GPU feature
# Install with kokoro-onnx[gpu]
gpu = [
    # onnxruntime-gpu is not available on Linux ARM or macOS
    "onnxruntime-gpu>=1.20.1; platform_machine == 'x86_64' and sys_platform != 'darwin'",
]

[tool.setuptools.package-data]
kokoro_onnx = ["*.json"]
